# GNN

./: .gitignore  README.md  environment.yml  pyproject.toml
results/crossover/: composition_extension.csv  config_fast.json  lr_search.csv  raw_fast.csv  raw_ref.csv  redundancy.csv  shap_top15.csv  summary_fast.csv  summary_ref_hi.csv
results/screen/: gates.json  ranked_all.csv  top50_li.csv
scripts/: fetch_snapshot.py  plot_crossover.py  prepare_obelix.py  run_composition_extension.py  run_crossover.py  run_feature_analysis.py  run_screen_obelix.py  tune_gnn.py
src/gnnsse/: __init__.py
src/gnnsse/data/: __init__.py  mp_fetch.py
src/gnnsse/features/: __init__.py  obelix_graph.py
src/gnnsse/models/: __init__.py  alignn.py  cgcnn.py
tests/: test_graph_builder.py  test_models.py
